# LongevityQA

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
app/: api.tsx  package-lock.json  package.json  vercel.json  vite.config.js
app/public/: index.html  manifest.json  staticwebapp.config.json
app/src/: App.tsx  index.tsx  process.env
app/src/api/: ask.ts
app/src/client/: client.gen.ts
app/src/components/: Button.tsx  Loader.tsx  PredefinedQA.tsx  QuestionAnswer.tsx  TextBox.tsx
app/src/styles/: App.css  PredefinedQA.css
backend/: api.py  config.py  event_listener.py  llm_layers.py  qa_model.py
backend/crews/answer_processing_crew/: answer_crew.py
backend/crews/answer_processing_crew/config/: agents.yaml
backend/crews/question_parsing_crew/: guardrail.py  question_crew.py
backend/crews/question_parsing_crew/config/: agents.yaml  tasks.yaml
backend/crews/simple_qa_crew/: qa_crew.py
backend/database/: __init__.py  base_database.py  postgres_database.py  sqllite_database.py
backend/knowledge/exercises/: exercises.csv
backend/knowledge/knowledge_graph/: diagnosis_kg.csv  diagnosis_kg.parquet  supplements_kg.csv
backend/knowledge/reference_ranges/: RefRangesStable.csv  RefRangesStable.json  marker_to_condition_map.csv
backend/knowledge/symptoms/: disease_symptoms_DO.csv  disease_symptoms_NYhospital.csv
backend/llm/: llm.py
backend/models/: hardcoded_answers.py  outputs.py  questions_answers.py
backend/qa_api/: qa_api.py  qa_service.py
backend/tests/: conftest.py  test_ask.py
backend/tools/: kg_queries.py  predefined_questions.py
backend/utils/: blob_storage.py  get_knowledge_sources.py  logging.py  task_manager.py
deployment-scripts/: generate-requirements.sh
(+99 files in other folders)
